[gd_scene load_steps=12 format=2]

[ext_resource path="res://input/Input.gd" type="Script" id=1]
[ext_resource path="res://fonts/noto_sans_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=4]
[ext_resource path="res://map/map_visual.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.215686, 0.215686, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0588235, 0.0588235, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.364706, 0.368627, 0.376471, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.364706, 0.368627, 0.376471, 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1294.0
margin_bottom = 600.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1274.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/HBoxContainer/Rows"]
margin_right = 984.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/HBoxContainer/Rows/GameInfo"]
margin_right = 984.0
margin_bottom = 480.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/Rows/GameInfo/Scroll"]
margin_right = 984.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/HBoxContainer/Rows"]
margin_top = 500.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 984, 60 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/HBoxContainer/Rows/InputArea"]
margin_right = 984.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="Caret" type="Label" parent="Background/MarginContainer/HBoxContainer/Rows/InputArea/HBoxContainer"]
margin_top = 10.0
margin_right = 30.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/HBoxContainer/Rows/InputArea/HBoxContainer"]
margin_left = 35.0
margin_right = 984.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
max_length = 48
caret_blink = true
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="Background/MarginContainer/HBoxContainer"]
margin_left = 1004.0
margin_right = 1254.0
margin_bottom = 560.0
rect_min_size = Vector2( 250, 0 )
custom_styles/panel = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 250.0
margin_bottom = 560.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 245.0
margin_bottom = 555.0
custom_constants/separation = 10
alignment = 2

[node name="CommandProcessor" type="Node2D" parent="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
script = ExtResource( 4 )

[node name="staminaRegenTimer" type="Timer" parent="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CommandProcessor"]
wait_time = 0.5

[node name="map_visual" parent="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 275.0
margin_bottom = 550.0

[node name="exitTimer" type="Timer" parent="."]

[node name="deathMessageTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="text_entered" from="Background/MarginContainer/HBoxContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/HBoxContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/HBoxContainer/Rows/InputArea/HBoxContainer/Input" method="_on_Input_text_entered"]
[connection signal="player_died" from="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CommandProcessor" to="." method="_on_CommandProcessor_player_died"]
[connection signal="timeout" from="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CommandProcessor/staminaRegenTimer" to="Background/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CommandProcessor" method="_on_staminaRegenTimer_timeout"]
[connection signal="timeout" from="exitTimer" to="." method="_on_exitTimer_timeout"]
[connection signal="timeout" from="deathMessageTimer" to="." method="_on_deathMessageTimer_timeout"]
